emails updated to generic

--- a/email/html/register.html
+++ b/email/html/register.html
@@ -267,7 +267,7 @@
                             color: #4b5563;
                           "
                         >
-                          Hotspot Vaccine Notifications
+                          Vaccine Notifications
                         </div>
                       </td>
                     </tr>
@@ -290,8 +290,9 @@
                           "
                         >
                           We will notify you by email when you become eligible
-                          for a vaccine at a hotspot vaccination site based on
-                          the information you provided when you signed up.
+                          for a vaccine at a pop-up or hot spot vaccination site
+                          based on the information you provided when you signed
+                          up.
                         </div>
                       </td>
                     </tr>
