--- a/email/html/notify.html
+++ b/email/html/notify.html
@@ -289,7 +289,7 @@
                             color: #4b5563;
                           "
                         >
-                          You are eligible to register at the following {{type}}
+                          You are eligible to register at the following
                           vaccination site based on the information you provided
                           when you signed up for notifications.
                         </div>
